--- a/galeria.html
+++ b/galeria.html
@@ -1,37 +1,32 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vegas de Breña Alta</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Galería - Vegas de Breña Alta</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="https://unpkg.com/basiclightbox@5.0.4/dist/basicLightbox.min.css">
   <style>
-    html {
-      scroll-behavior: smooth;
-    }
-
     body {
       background-image: url('images/fondo-galeria.jpg');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
       background-repeat: no-repeat;
-      background-color: black;
     }
   </style>
 </head>
-<body class="text-gray-100 min-h-screen flex flex-col">
-
-  <!-- Header de navegación -->
-  <header id="main-header" class="bg-black bg-opacity-60 backdrop-blur sticky top-0 z-50 transition-all duration-300 shadow-md">
-    <div class="max-w-7xl mx-auto px-4 py-4 flex flex-col sm:flex-row justify-between items-center gap-2">
-      <h1 class="text-xl sm:text-2xl font-bold text-green-200">Vegas de Breña Alta</h1>
-      <nav class="flex flex-wrap justify-center gap-3 text-gray-200">
-        <a href="index.html" class="hover:text-green-300">Inicio</a>
-        <a href="nosotros.html" class="hover:text-green-300">Nosotros</a>
-        <a href="productos.html" class="hover:text-green-300">Productos</a>
-        <a href="galeria.html" class="text-green-300 font-semibol">Galería</a>
-        <a href="contacto.html" class="hover:text-green-300">Contacto</a>
+<body class="text-gray-100">
+  <!-- Navegación -->
+  <header class="bg-black bg-opacity-60 shadow-md sticky top-0 z-50 backdrop-blur">
+    <div class="max-w-7xl mx-auto px-4 py-4 flex flex-col md:flex-row justify-between items-center">
+      <h1 class="text-xl md:text-2xl font-bold text-green-200 mb-2 md:mb-0 text-center">Vegas de Breña Alta</h1>
+      <nav class="flex flex-wrap justify-center space-x-4 text-gray-200">
+        <a href="index.html" class="hover:underline">Inicio</a>
+        <a href="nosotros.html" class="hover:underline">Nosotros</a>
+        <a href="productos.html" class="hover:underline">Productos</a>
+        <a href="galeria.html" class="text-green-300 font-semibold underline">Galería</a>
+        <a href="contacto.html" class="hover:underline">Contacto</a>
       </nav>
     </div>
   </header>
@@ -42,27 +37,27 @@
       <h2 class="text-3xl sm:text-4xl font-bold text-green-200 text-center mb-10 sm:mb-12">Galería de Imágenes</h2>
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 sm:gap-6">
         <!-- Imagen 1 -->
-        <div class="overflow-hidden rounded-lg shadow-xl aspect-[4/3]">
+        <div onclick="abrirImagen('images/galeria1.jpg')" class="overflow-hidden rounded-lg shadow-xl aspect-[4/3] cursor-pointer">
           <img src="images/galeria1.jpg" alt="Tabaco artesanal 1" class="w-full h-full object-cover transition-transform duration-300 hover:scale-105">
         </div>
         <!-- Imagen 2 -->
-        <div class="overflow-hidden rounded-lg shadow-xl aspect-[4/3]">
+        <div onclick="abrirImagen('images/galeria2.jpg')" class="overflow-hidden rounded-lg shadow-xl aspect-[4/3] cursor-pointer">
           <img src="images/galeria2.jpg" alt="Tabaco artesanal 2" class="w-full h-full object-cover transition-transform duration-300 hover:scale-105">
         </div>
         <!-- Imagen 3 -->
-        <div class="overflow-hidden rounded-lg shadow-xl aspect-[4/3]">
+        <div onclick="abrirImagen('images/galeria3.jpg')" class="overflow-hidden rounded-lg shadow-xl aspect-[4/3] cursor-pointer">
           <img src="images/galeria3.jpg" alt="Tabaco artesanal 3" class="w-full h-full object-cover transition-transform duration-300 hover:scale-105">
         </div>
         <!-- Imagen 4 -->
-        <div class="overflow-hidden rounded-lg shadow-xl aspect-[4/3]">
+        <div onclick="abrirImagen('images/galeria4.jpg')" class="overflow-hidden rounded-lg shadow-xl aspect-[4/3] cursor-pointer">
           <img src="images/galeria4.jpg" alt="Fábrica de tabaco" class="w-full h-full object-cover transition-transform duration-300 hover:scale-105">
         </div>
         <!-- Imagen 5 -->
-        <div class="overflow-hidden rounded-lg shadow-xl aspect-[4/3]">
+        <div onclick="abrirImagen('images/galeria5.jpg')" class="overflow-hidden rounded-lg shadow-xl aspect-[4/3] cursor-pointer">
           <img src="images/galeria5.jpg" alt="Producción de tabaco" class="w-full h-full object-cover transition-transform duration-300 hover:scale-105">
         </div>
         <!-- Imagen 6 -->
-        <div class="overflow-hidden rounded-lg shadow-xl aspect-[4/3]">
+        <div onclick="abrirImagen('images/galeria6.jpg')" class="overflow-hidden rounded-lg shadow-xl aspect-[4/3] cursor-pointer">
           <img src="images/galeria6.jpg" alt="Hoja de tabaco" class="w-full h-full object-cover transition-transform duration-300 hover:scale-105">
         </div>
       </div>
@@ -73,6 +68,17 @@
   <footer class="text-center py-4">
     <p class="text-xs text-gray-300">&copy; 2025 Vegas de Breña Alta. Todos los derechos reservados.</p>
   </footer>
+
+  <!-- Scripts -->
+  <script src="https://unpkg.com/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
+  <script>
+    function abrirImagen(src) {
+      basicLightbox.create(`
+        <img src="${src}" class="w-full max-w-4xl rounded-lg shadow-2xl transition duration-500 ease-in-out transform hover:scale-105"/>
+      `).show()
+    }
+  </script>
 </body>
 </html>
+
 
