--- a/galeria.html
+++ b/galeria.html
@@ -15,7 +15,7 @@
     }
 
     body {
-      background-image: url('images/hero-vegas.jpg');
+      background-image: url('images/fondo-galeria.jpg');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
@@ -48,10 +48,10 @@
     <div class="max-w-7xl mx-auto px-4 py-4 flex flex-col sm:flex-row justify-between items-center gap-2">
       <h1 class="text-xl sm:text-2xl font-bold text-green-200">Vegas de Breña Alta</h1>
       <nav class="flex flex-wrap justify-center gap-3 text-gray-200">
-        <a href="index.html" class="text-green-300 font-semibold">Inicio</a>
+        <a href="index.html" class="hover:text-green-300">Inicio</a>
         <a href="nosotros.html" class="hover:text-green-300">Nosotros</a>
         <a href="productos.html" class="hover:text-green-300">Productos</a>
-        <a href="galeria.html" class="hover:text-green-300">Galería</a>
+        <a href="galeria.html" class="text-green-300 font-semibold">Galería</a>
         <a href="contacto.html" class="hover:text-green-300">Contacto</a>
       </nav>
     </div>
