--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
   </header>
 
   <!-- Presentación principal -->
-  <main class="py-24 px-4 bg-black bg-opacity-70 min-h-screen flex items-center justify-center text-center">
-    <div class="max-w-2xl mx-auto">
-      <h2 class="text-5xl font-bold text-green-300 mb-6 titulo">Bienvenido a Vegas de Breña Alta</h2>
-      <p class="text-xl text-gray-200 parrafo">
+  <main class="py-24 px-4 bg-black bg-opacity-40 min-h-screen flex items-center justify-center text-center">
+    <div class="max-w-3xl mx-auto">
+      <h2 class="text-6xl font-bold text-green-300 mb-8 titulo">Bienvenido a Vegas de Breña Alta</h2>
+      <p class="text-2xl text-gray-200 parrafo">
         Tabaco artesanal de calidad, cultivado en las tierras volcánicas de La Palma.
       </p>
     </div>
