--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Lora&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet" />
 
   <style>
     html {
@@ -24,10 +24,6 @@
       font-family: 'Lora', serif;
     }
 
-    .titulo {
-      font-family: 'Playfair Display', serif;
-    }
-
     .fade-in {
       animation: fadeIn 0.8s ease-in;
     }
@@ -41,15 +37,17 @@
 
 <body class="fade-in text-gray-100 min-h-screen flex flex-col">
   <!-- Header de navegación -->
-  <header id="main-header" class="bg-black bg-opacity-60 backdrop-blur sticky top-0 z-50 transition-all duration-300 shadow-md">
+  <header id="main-header" class="bg-black bg-opacity-60 backdrop-blur sticky top-0 z-50 shadow-md">
     <div class="max-w-7xl mx-auto px-4 py-4 flex flex-col sm:flex-row justify-between items-center gap-2">
-      <h1 class="text-xl sm:text-2xl font-bold text-green-200 titulo hover:scale-105 transition">Vegas de Breña Alta</h1>
+      <h1 class="text-xl sm:text-2xl font-bold text-green-200 hover:scale-105 transition">
+        Vegas de Breña Alta
+      </h1>
       <nav class="flex flex-wrap justify-center gap-3 text-gray-200 text-sm sm:text-base">
         <a href="index.html" class="hover:text-green-300 transition">Inicio</a>
         <a href="nosotros.html" class="hover:text-green-300 transition">Nosotros</a>
         <a href="productos.html" class="hover:text-green-300 transition">Productos</a>
         <a href="galeria.html" class="hover:text-green-300 transition">Galería</a>
-        <a href="contacto.html" class="text-green-300 font-semibold underline scale-105 transition">Contacto</a>
+        <a href="contacto.html" class="text-green-300 font-semibold underline transition">Contacto</a>
       </nav>
     </div>
   </header>
@@ -57,7 +55,7 @@
   <!-- Contenido principal -->
   <main class="flex-grow flex items-center justify-center px-4 py-10 sm:py-14">
     <section class="relative z-10 w-full max-w-[95%] md:max-w-2xl bg-black bg-opacity-70 rounded-2xl shadow-xl backdrop-blur p-6 sm:p-8 transition duration-300 hover:shadow-2xl">
-      <h2 class="text-3xl sm:text-4xl font-bold text-green-200 mb-6 text-center titulo">Contáctanos</h2>
+      <h2 class="text-3xl sm:text-4xl font-bold text-green-200 mb-6 text-center">Contáctanos</h2>
       <p class="text-base sm:text-lg text-gray-300 mb-6 text-center">Puedes escribirnos, llamarnos o enviarnos un WhatsApp. Te responderemos lo antes posible.</p>
 
       <!-- Información de contacto -->
@@ -115,4 +113,3 @@
   </footer>
 </body>
 </html>
-
