--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
   <!-- Presentación principal -->
   <main class="py-24 px-4 bg-black bg-opacity-40 min-h-screen flex items-center justify-center text-center">
     <div class="max-w-3xl mx-auto">
-      <h2 class="text-6xl font-bold text-green-300 mb-8 titulo">Bienvenido a Vegas de Breña Alta</h2>
-      <p class="text-2xl text-gray-200 parrafo">
+      <h2 class="text-6xl font-bold text-white mb-8 titulo drop-shadow-md">
+        Bienvenido a Vegas de Breña Alta
+      </h2>
+      <p class="text-2xl text-white font-semibold parrafo drop-shadow-md">
         Tabaco artesanal de calidad, cultivado en las tierras volcánicas de La Palma.
       </p>
     </div>
@@ -74,5 +76,6 @@
 
 </body>
 </html>
+
 
 
