--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </head>
 <body class="fade-in text-gray-100 min-h-screen flex flex-col">
 
-  <!-- Header de navegación -->
+  <!-- Header -->
   <header id="main-header" class="bg-black bg-opacity-60 backdrop-blur sticky top-0 z-50 transition-all duration-300 shadow-md">
     <div class="max-w-7xl mx-auto px-4 py-4 flex flex-col sm:flex-row justify-between items-center gap-2">
       <h1 class="text-xl sm:text-2xl font-bold text-green-200">Vegas de Breña Alta</h1>
@@ -57,17 +57,24 @@
     </div>
   </header>
 
-  <!-- Presentación principal -->
-  <main class="py-24 px-4 bg-black bg-opacity-40 min-h-screen flex items-center justify-center text-center">
-    <div class="max-w-3xl mx-auto">
-      <h2 class="text-6xl font-bold text-white mb-8 titulo drop-shadow-md">
+  <!-- Presentación -->
+  <main class="pt-24 px-4 bg-black bg-opacity-60">
+    <div class="max-w-3xl mx-auto text-center">
+      <h2 class="text-5xl font-bold text-white mb-6 titulo drop-shadow-md">
         Bienvenido a Vegas de Breña Alta
       </h2>
-      <p class="text-2xl text-white font-semibold parrafo drop-shadow-md">
+      <p class="text-xl text-gray-200 font-normal parrafo">
         Tabaco artesanal de calidad, cultivado en las tierras volcánicas de La Palma.
       </p>
     </div>
   </main>
+
+  <!-- Espacio para contenido adicional -->
+  <section class="py-20 px-4">
+    <div class="max-w-5xl mx-auto text-center text-white">
+      <!-- Aquí puedes agregar botones, historia, llamados a la acción, etc. -->
+    </div>
+  </section>
 
   <!-- Footer -->
   <footer class="text-center py-6 bg-black bg-opacity-80">
