--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </header>
 
   <!-- Presentación -->
-  <main class="pt-24 px-4 bg-black bg-opacity-60">
+  <main class="pt-24 pb-24 px-4">
     <div class="max-w-3xl mx-auto text-center">
       <h2 class="text-5xl font-bold text-white mb-6 titulo drop-shadow-md">
         Bienvenido a Vegas de Breña Alta
@@ -69,20 +69,10 @@
     </div>
   </main>
 
-  <!-- Espacio para contenido adicional -->
-  <section class="py-20 px-4">
-    <div class="max-w-5xl mx-auto text-center text-white">
-      <!-- Aquí puedes agregar botones, historia, llamados a la acción, etc. -->
-    </div>
-  </section>
-
   <!-- Footer -->
-  <footer class="text-center py-6 bg-black bg-opacity-80">
-    <p class="text-sm text-gray-400">&copy; 2025 Vegas de Breña Alta. Todos los derechos reservados.</p>
+  <footer class="mt-auto text-center py-4 bg-black bg-opacity-50">
+    <p class="text-xs text-gray-300">&copy; 2025 Vegas de Breña Alta. Todos los derechos reservados.</p>
   </footer>
 
 </body>
 </html>
-
-
-
