--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
   <!-- Presentación -->
   <main class="pt-24 pb-24 px-4">
     <div class="max-w-3xl mx-auto text-center">
-      <h2 class="text-5xl font-bold text-white mb-6 titulo drop-shadow-md">
-        Bienvenido a Vegas de Breña Alta
+      <h2 class="text-5xl font-bold text-green-300 mb-6 titulo drop-shadow-md">
+        Bienvenidos a Vegas de Breña Alta
       </h2>
-      <p class="text-xl text-gray-200 font-normal parrafo">
+      <p class="text-xl text-amber-200 font-normal parrafo drop-shadow-sm">
         Tabaco artesanal de calidad, cultivado en las tierras volcánicas de La Palma.
       </p>
     </div>
@@ -76,3 +76,4 @@
 
 </body>
 </html>
+
